# OpenGLtemplate

./: CMakeLists.txt  EBO.cpp  README.md  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp  shaderClass.cpp  shaderClass.h
shaders/: default.frag  default.vert
